# LearnOS

./: .gitignore  Cargo.toml  README.md  build.sh  run.sh  test.sh  verify.sh
.cargo/: config.toml
docs/: architecture.md  concepts.md  troubleshooting.md
kernel/: Cargo.toml  bootloader-runner
kernel/.cargo/: config.toml
kernel/src/: boot.S  boot.asm  device_manager.rs  elf.rs  ipc.rs  keyboard.rs  linker.ld  main.rs  paging.rs  process.rs  syscall.rs  user_program.rs  vga.rs
kernel/src/userspace/: mod.rs
scripts/: verify-boot.sh
