[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

description = "A minimal x86_64 kernel written in Rust with PVH support"

[dependencies]

[profile.release]
panic = "abort"

[profile.release.build-std]
target = "x86_64-unknown-none"
features = ["compiler-builtins-mem"]

[target.x86_64-unknown-none]
linker = "rust-lld"
linker-flavor = "ld.lld"
